--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Roboto', sans-serif; }
+
+.mat-raised-button, .mat-button {
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+}
+
+.button-separator {
+  width: 12px;
+  display: inline-block;
+}
