Go to front page instead of navigating back when clicking back button on quiz intro page.

--- a/src/app/quiz-player/quiz-player.component.html
+++ b/src/app/quiz-player/quiz-player.component.html
@@ -14,7 +14,7 @@
     
     <button (click)="start()" mat-raised-button color="accent">Start</button>
     <span class="button-separator"></span>
-    <a (click)="goBack()" mat-button>Tilbake</a>
+    <a routerLink="/" mat-button>Tilbake</a>
   </div>
   
   <div *ngIf="quizPlayer.state == StateEnum.Playing">
